Fix dashboard button spacing for multiple lines of buttons

--- a/AKDashboard/static/AKDashboard/style.css
+++ b/AKDashboard/static/AKDashboard/style.css
@@ -22,6 +22,7 @@
     padding: 2em;
     margin-right: 1em;
     min-width: 15em;
+    margin-bottom: 1em;
 }
 
 .dashboard-button {
